--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
 	"dependencies": {
 		"colors": "*",
 		"serialport": "*",
-		"express": "3.*",
-		"socket.io": "*"
+		"express": ">=3.0.0",
+		"socket.io": "*",
+		"sqlite3": "*"
 	},
 	"engines": {
 		"node": ">=0.6"
